--- a/team5/app.yaml
+++ b/team5/app.yaml
@@ -1,4 +1,4 @@
-application: ranking
+application: team5
 version: 1
 runtime: python27
 api_version: 1
@@ -9,18 +9,9 @@ handlers:
   static_files: favicon.ico
   upload: favicon\.ico
 
-- url: /stylesheets
-  static_dir: stylesheets
-
-- url: /static
-  static_dir: static
 - url: .*
   script: main.app
 
 libraries:
-- name: jinja2
-  version: latest
-- name: markupsafe
-  version: latest
 - name: webapp2
   version: "2.5.2"
